--- a/portfolio-pokemon.html
+++ b/portfolio-pokemon.html
@@ -48,24 +48,24 @@
 
             <!-- Carousel -->
             <div class="carousel">
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item-visible">
                     <img src="img/pokemon/pokemon-landing.png" alt="" />
                 </div>
-                <div class="carousel-item carousel-item-visible">
+                <div class="carousel-item">
                     <img src="img/pokemon/pokemon-home.png" alt="" />
                 </div>
-                <!-- <div class="carousel-item carousel-item-visible">
+                <div class="carousel-item">
                     <img src="img/pokemon/pokemon-pagination.png" alt="" />
-                </div> -->
-                <!-- <div class="carousel-item carousel-item-visible">
+                </div>
+                <div class="carousel-item">
                     <img src="img/pokemon/pokemon-no-result.png" alt="" />
-                </div> -->
+                </div>
                 <div class="carousel-item">
                     <img src="img/pokemon/pokemon-form.png" alt="" />
                 </div>
-                <!-- <div class="carousel-item">
+                <div class="carousel-item">
                     <img src="img/pokemon/pokemon-form-errors.png" alt="" />
-                </div> -->
+                </div>
                 <div class="carousel-item">
                     <img src="img/pokemon/pokemon-about.png" alt="" />
                 </div>
@@ -85,7 +85,7 @@
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div style="text-align: center;">
-                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Quizzical</a>
+                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Pokemon World</a>
                 <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn btn-space">GitHub repository</a>
             </div>
 
