--- a/portfolio-quizzical.html
+++ b/portfolio-quizzical.html
@@ -47,13 +47,13 @@
 
             <!-- Carousel -->
             <div class="carousel">
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item-visible">
                     <img src="img/quizzical/quizzical-home.png" alt="" />
                 </div>
                 <div class="carousel-item">
                     <img src="img/quizzical/quizzical-quiz.png" alt="" />
                 </div>
-                <div class="carousel-item carousel-item-visible">
+                <div class="carousel-item">
                     <img src="img/quizzical/quizzical-answers.png" alt="" />
                 </div>
                 
@@ -72,7 +72,7 @@
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div style="text-align: center;">
-                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Quizzical App</a>
+                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Quizzical</a>
                 <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn btn-space">GitHub repository</a>
             </div>
 
