--- a/portfolio-space-travel.html
+++ b/portfolio-space-travel.html
@@ -47,14 +47,17 @@
 
             <!-- Carousel -->
             <div class="carousel">
-                <div class="carousel-item">
-                    <img src="img/quizzical/quizzical-home.png" alt="" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/quizzical/quizzical-quiz.png" alt="" />
-                </div>
                 <div class="carousel-item carousel-item-visible">
-                    <img src="img/quizzical/quizzical-answers.png" alt="" />
+                    <img src="img/space-travel/space-home.png" alt="" />
+                </div>
+                <div class="carousel-item">
+                    <img src="img/space-travel/space-destination.png" alt="" />
+                </div>
+                <div class="carousel-item">
+                    <img src="img/space-travel/space-crew.png" alt="" />
+                </div>
+                <div class="carousel-item">
+                    <img src="img/space-travel/space-technology.png" alt="" />
                 </div>
                 
                 <div class="carousel-actions">
@@ -72,8 +75,8 @@
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div style="text-align: center;">
-                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Quizzical App</a>
-                <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn btn-space">GitHub repository</a>
+                <a href="https://space-travel-alexia.netlify.app/" target="_blank" class="btn btn-space">Space Tourism</a>
+                <a href="https://github.com/AlexiaMilanesio/SpaceTravel" target="_blank" class="btn btn-space">GitHub repository</a>
             </div>
 
             <br/>
