initial commits for tenzies and tindog apps

--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
                 <a href="portfolio-space-travel.html" class="portfolio__item">
                     <img src="img/space-travel/space-logo.jpg" alt="" class="portfolio__img">
                 </a>
+
+                <!-- Portfolio item 06 -->
+                    <a href="portfolio-tenzies.html" class="portfolio__item">
+                        <img src="img/tenzies/tenzies-logo.jpg" alt="" class="portfolio__img">
+                    </a>
+
+                <!-- Portfolio item 07 -->
+                <a href="portfolio-tindog.html" class="portfolio__item">
+                    <img src="img/tindog/tindog-logo.jpg" alt="" class="portfolio__img">
+                </a>
             </div>
         </section>
 
