tindog and tenzies fixes

--- a/portfolio-tenzies.html
+++ b/portfolio-tenzies.html
@@ -68,7 +68,7 @@
 
             <br/>
 
-            <p>This app was built using HTML, CSS and JavaScript.</p>
+            <p>This app was built using React.</p>
 
             <br/>
 
