--- a/portfolio-tindog.html
+++ b/portfolio-tindog.html
@@ -44,7 +44,8 @@
         
         <div class="portfolio-item-individual">
             <p style="text-align: center;"><strong>Scrimba - Project</strong></p>
-            <p>If you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we&apos;ll give you a truly out of this world experience with this amazing Space Tourisme Website!</p>
+            <p>Social networking app created for pets!</p>
+            <p>Have you ever wished your dog had a playmate or walking buddy? That wish can come true when you create a profile for your pup on Tindog, the dog meetup app. Described as “Tinder for dogs,” this app offers a wonderful way to find the perfect friend for your pooch.</p>
             
             <br/>
 
@@ -71,15 +72,15 @@
 
             <br/>
 
-            <p>This app was built using HTML, CSS and JavaScript. Following the instructions of the one and only, CSS king, Kevin Powell I was able to build this modern and clean website while studying The Frontend Developer Career Path from Scrimba. As homework I built the "technology section" by myself.</p>
+            <p>This app was built using React.</p>
 
             <br/>
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div style="text-align: center;">
-                <a href="https://space-travel-alexia.netlify.app/" target="_blank" class="btn btn-space">Space Tourism</a>
-                <a href="https://github.com/AlexiaMilanesio/SpaceTravel" target="_blank" class="btn btn-space">GitHub repository</a>
+                <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn btn-space">Tindog</a>
+                <a href="https://github.com/AlexiaMilanesio/Tindog" target="_blank" class="btn btn-space">GitHub repository</a>
             </div>
 
             <br/>
