--- a/portfolio-tindog.html
+++ b/portfolio-tindog.html
@@ -52,16 +52,16 @@
             <!-- Carousel -->
             <div class="carousel">
                 <div class="carousel-item carousel-item-visible">
-                    <img src="img/space-travel/space-home.png" alt="" />
+                    <img src="img/tindog/tingdog-dogs.png" alt="" />
                 </div>
                 <div class="carousel-item">
-                    <img src="img/space-travel/space-destination.png" alt="" />
+                    <img src="img/tindog/tindog-like.png" alt="" />
                 </div>
                 <div class="carousel-item">
-                    <img src="img/space-travel/space-crew.png" alt="" />
+                    <img src="img/tindog/tindog-nope.png" alt="" />
                 </div>
                 <div class="carousel-item">
-                    <img src="img/space-travel/space-technology.png" alt="" />
+                    <img src="img/tindog/tindog-end.png" alt="" />
                 </div>
                 
                 <div class="carousel-actions">
@@ -72,14 +72,14 @@
 
             <br/>
 
-            <p>This app was built using React.</p>
+            <p>This app was built using HTML, CSS and JavaScript.</p>
 
             <br/>
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div style="text-align: center;">
-                <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn btn-space">Tindog</a>
+                <!-- <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn btn-space">Tindog</a> -->
                 <a href="https://github.com/AlexiaMilanesio/Tindog" target="_blank" class="btn btn-space">GitHub repository</a>
             </div>
 
