images form, css, project btns fixes, etc

--- a/portfolio-space-travel.html
+++ b/portfolio-space-travel.html
@@ -77,9 +77,9 @@
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
-            <div style="text-align: center;">
+            <div class="project-btns-container">
                 <a href="https://space-travel-alexia.netlify.app/" target="_blank" class="btn btn-space">Space Tourism</a>
-                <a href="https://github.com/AlexiaMilanesio/SpaceTravel" target="_blank" class="btn btn-space">GitHub repository</a>
+                <a href="https://github.com/AlexiaMilanesio/SpaceTravel" target="_blank" class="btn">GitHub repository</a>
             </div>
 
             <br/>
