--- a/portfolio-tindog.html
+++ b/portfolio-tindog.html
@@ -39,7 +39,7 @@
                 The<strong>Tindog App</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">tinder for dogs</p>
-            <img src="img/tindog/tindog-logo.jpg" alt="" class="intro__img">
+            <img src="img/tindog/tindog-logo-02.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
@@ -78,9 +78,10 @@
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
-            <div style="text-align: center;">
-                <!-- <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn btn-space">Tindog</a> -->
-                <a href="https://github.com/AlexiaMilanesio/Tindog" target="_blank" class="btn btn-space">GitHub repository</a>
+            <div class="project-btns-container">
+                <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn">Tindog</a>
+                <span class="btn-space" style="font-size: .8em;">(Work in progress)</span>
+                <a href="https://github.com/AlexiaMilanesio/Tindog" target="_blank" class="btn">GitHub repository</a>
             </div>
 
             <br/>
