--- a/portfolio-movies.html
+++ b/portfolio-movies.html
@@ -76,9 +76,9 @@
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
-            <div style="text-align: center;">
+            <div class="project-btns-container">
                 <a href="https://my-watchlist-alexia.netlify.app/index.html" target="_blank" class="btn btn-space">Movies Watchlist</a>
-                <a href="https://github.com/AlexiaMilanesio/Movies-Watchlist" target="_blank" class="btn btn-space">GitHub repository</a>
+                <a href="https://github.com/AlexiaMilanesio/Movies-Watchlist" target="_blank" class="btn">GitHub repository</a>
             </div>
 
             <br/>
