--- a/portfolio-pokemon.html
+++ b/portfolio-pokemon.html
@@ -39,7 +39,7 @@
                 The <strong>Pokemon App</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">pokemon world</p>
-            <img src="img/pokemon/pokemon-logo.jpg" alt="" class="intro__img">
+            <img src="img/pokemon/pokemon-logo-02.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
@@ -87,9 +87,10 @@
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
-            <div style="text-align: center;">
-                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Pokemon World</a>
-                <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn btn-space">GitHub repository</a>
+            <div class="project-btns-container" style="text-align: center;">
+                <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn">Pokemon World</a>
+                <span class="btn-space" style="font-size: .8em;">(Work in progress)</span>
+                <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn">GitHub repository</a>
             </div>
 
             <br/>
