--- a/portfolio-quizzical.html
+++ b/portfolio-quizzical.html
@@ -74,9 +74,9 @@
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
-            <div style="text-align: center;">
+            <div class="project-btns-container">
                 <a href="https://quizzical-alexia.netlify.app/" target="_blank" class="btn btn-space">Quizzical</a>
-                <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn btn-space">GitHub repository</a>
+                <a href="https://github.com/AlexiaMilanesio/Quizzical" target="_blank" class="btn">GitHub repository</a>
             </div>
 
             <br/>
