--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -86,9 +86,9 @@
                 If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:
             </p>
 
-            <div style="text-align: center;">
+            <div class="project-btns-container">
                 <a href="https://sirunnpatisserie.vercel.app/" target="_blank" class="btn btn-space">Sirun Pâtisserie</a>
-                <a href="https://github.com/proyectofinal30a/App-Sirun-Final-Project" target="_blank" class="btn btn-space">GitHub repository</a>
+                <a href="https://github.com/proyectofinal30a/App-Sirun-Final-Project" target="_blank" class="btn">GitHub repository</a>
             </div>
             <br/>
         </div>
