--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -81,10 +81,7 @@
             <p>As an <strong>administrator</strong> you will also have access to the administration section of the app. Here you'll be able to manage the existing products, the existing users, manage orders and change their status and control the reviews every user has added. You will also be able to check out the sales metrics and upload new products to the e-commerce.</p>
             <p>As a <strong>super administrator</strong>in the administration section of the app you will be able to manage the existing users by also being able to set the role of every user.</p>
 
-            <br/>
-            <p>
-                If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:
-            </p>
+            <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div class="project-btns-container">
                 <a href="https://sirunnpatisserie.vercel.app/" target="_blank" class="btn btn-space">Sirun Pâtisserie</a>
