p fixes projects movies, quizzical and sirun

--- a/portfolio-movies.html
+++ b/portfolio-movies.html
@@ -44,7 +44,7 @@
         
         <div class="portfolio-item-individual">
             <p style="text-align: center;"><strong>Scrimba - Solo Project</strong></p>
-            <p>This app was built using HTML, CSS and JavaScript. You can search for movies and series, check their ratings and save them in your watchlist for later.</p>
+            <p>With this app you can search for movies and series, check their ratings and save them in your watchlist for later.</p>
             
             <br/>
 
@@ -71,6 +71,10 @@
                     <button id="carousel-button-next" aria-label="Next Slide">></button>
                 </div>
             </div>
+
+            <br/>
+
+            <p>This app was built using HTML, CSS and JavaScript.</p>
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
