--- a/portfolio-quizzical.html
+++ b/portfolio-quizzical.html
@@ -44,7 +44,7 @@
         
         <div class="portfolio-item-individual">
             <p style="text-align: center;"><strong>Scrimba - Solo Project</strong></p>
-            <p>You can test your knowledge about movies and cinema with this quiz app.</p>
+            <p>With Quizzical you can test your knowledge about movies and cinema with this quiz app.</p>
             
             <br/>
 
