--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                 </div>
                 
                 <div class="service">
-                    <h3>Design</h3>
-                    <p>I pay a lot of attention to detail. I focus on the careful and precise positioning of the important elements throughout a website</p>
+                    <h3>Design, Business & Marketing</h3>
+                    <p>I pay a lot of attention to detail. I focus on the careful and precise positioning of the important elements throughout a website and the color scheme.
+                    Also, due to my university career I have extensive knowledge in business administration and marketing which comes in handy when designing a website.</p>
                 </div>
             </div> 
             
