--- a/portfolio-tindog.html
+++ b/portfolio-tindog.html
@@ -47,7 +47,7 @@
         <div class="portfolio-item-individual">
             <p style="text-align: center;"><strong>Scrimba - Project</strong></p>
             <p>Social networking app created for pets!</p>
-            <p>Have you ever wished your dog had a playmate or walking buddy? That wish can come true when you create a profile for your pup on Tindog, the dog meetup app. Described as “Tinder for dogs,” this app offers a wonderful way to find the perfect friend for your pooch.</p>
+            <p>Have you ever wished your dog had a playmate or walking buddy? That wish can come true when you create a profile for your pup on Tindog, the dog meetup app. Described as “Tinder for dogs”, this app offers a wonderful way to find the perfect friend for your pooch.</p>
             
             <br/>
 
