added deployment link to pokemon

--- a/portfolio-tindog.html
+++ b/portfolio-tindog.html
@@ -80,11 +80,11 @@
 
             <p>This app was built using HTML, CSS and JavaScript.</p>
 
-            <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
+            <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the GitHub respository link:</p>
 
             <div class="project-btns-container">
-                <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn">Tindog</a>
-                <span class="btn-space" style="font-size: .8em;">(Work in progress)</span>
+                <!-- <a href="https://tindog-alexia.netlify.app/" target="_blank" class="btn">Tindog</a> -->
+                <!-- <span class="btn-space" style="font-size: .8em;">(Work in progress)</span> -->
                 <a href="https://github.com/AlexiaMilanesio/Tindog" target="_blank" class="btn">GitHub repository</a>
             </div>
 
