--- a/portfolio-pokemon.html
+++ b/portfolio-pokemon.html
@@ -92,8 +92,7 @@
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div class="project-btns-container" style="text-align: center;">
-                <a href="#" target="_blank" class="btn">Pokemon World</a>
-                <span class="btn-space" style="font-size: .8em;">(Work in progress)</span>
+                <a href="https://pokemons-alexia.netlify.app" target="_blank" class="btn">Pokemon World</a>
                 <a href="https://github.com/AlexiaMilanesio/PI-Pokemons" target="_blank" class="btn">GitHub repository</a>
             </div>
 
