added technologies to every project

--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
                     <span>ReactJS</span>
                 </div>
                 <div class="icon-container">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
+                    <span>Redux</span>
+                </div>
+                <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
                     <span>Nextjs</span>
                 </div>
@@ -197,6 +201,10 @@
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" />
                     <span>Firebase</span>
+                </div>
+                <div class="icon-container">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sequelize/sequelize-original.svg" />
+                    <span>Sequelize</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
