--- a/portfolio-pokemon.html
+++ b/portfolio-pokemon.html
@@ -27,12 +27,12 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills & Tools</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="index.html#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills & Tools</a></li>
+                    <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -50,6 +50,64 @@
             <p style="text-align: center;"><strong>Henry Bootcamp - Full Stack Solo Project</strong></p>
             <p>The first Full Stack App I developed by myself.</p>
             <p><strong>Project goals: </strong> build an app using React, Redux, NodeJS and Sequelize - PostgreSQL (technologies learned during the bootcamp) to affirm and connect the learned concepts.</p>
+
+            <div class="portfolio-skills-container">
+                <p class="portfolio-skills__subtitle">Tools and technologies used for this project</p>
+                <div class="skills">
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                        <span>HTML5</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                        <span>CSS3</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
+                        <span>ReactJS</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
+                        <span>Redux</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sequelize/sequelize-original.svg" />
+                        <span>Sequelize</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
+                        <span>PostreSQL</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+                        <span>NodeJS</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" />
+                        <span>Express</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
+                        <span>GitHub</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+                        <span>Git</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
+                        <span>VSCode</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />
+                        <span>Discord</span>
+                    </div>
+                </div>
+            </div>
             
             <br/>
 
@@ -94,7 +152,7 @@
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
             <div class="project-btns-container" style="text-align: center;">
-                <a href="https://pokemons-alexia.netlify.app" target="_blank" class="btn">Pokemon World</a>
+                <a href="https://pokemons-alexia.netlify.app" target="_blank" class="btn btn-space">Pokemon World</a>
                 <a href="https://github.com/AlexiaMilanesio/PI-Pokemons" target="_blank" class="btn">GitHub repository</a>
             </div>
 
