--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -27,12 +27,12 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills & Tools</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="index.html#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills & Tools</a></li>
+                    <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -50,6 +50,72 @@
             <p style="text-align: center;"><strong>Henry Bootcamp - Final Project</strong></p>
             <p>This E-Commerce was design and built by a group of 5 people in 3 weeks and a half. The project was developed for a real-life pastry business located in Buenos Aires, Argentina.</p>
             <p><strong>Project goals:</strong> build an app using the technologies learned during the bootcamp and with a new technology, affirm and connect the learned concepts, learn the best practices, learn and practice the GIT Workflow, teamwork and soft skills development.</p>
+
+            <div class="portfolio-skills-container">
+                <p class="portfolio-skills__subtitle">Tools and technologies used for this project</p>
+                <div class="skills">
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" />
+                        <span>TypeScript</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                        <span>HTML5</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                        <span>CSS3</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/img/framer-motion-logo.png" />
+                        <span>FramerMotion</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
+                        <span>Nextjs</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
+                        <span>ReduxToolkit</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="/img/prisma-logo.png" />
+                        <span>Prisma</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+                        <span>NodeJS</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" />
+                        <span>Express</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
+                        <span>GitHub</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+                        <span>Git</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
+                        <span>VSCode</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/slack/slack-original.svg" />
+                        <span>Slack</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />
+                        <span>Discord</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/trello/trello-plain.svg" />
+                        <span>Trello</span>
+                    </div>
+                </div>
+            </div>
             
             <br/>
 
