--- a/portfolio-space-travel.html
+++ b/portfolio-space-travel.html
@@ -27,12 +27,12 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills & Tools</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="index.html#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills & Tools</a></li>
+                    <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -49,6 +49,36 @@
         <div class="portfolio-item-individual">
             <p style="text-align: center;"><strong>Scrimba - Project</strong></p>
             <p>If you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we&apos;ll give you a truly out of this world experience with this amazing Space Tourisme Website!</p>
+
+            <div class="portfolio-skills-container">
+                <p class="portfolio-skills__subtitle">Tools and technologies used for this project</p>
+                <div class="skills">
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                        <span>HTML5</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                        <span>CSS3</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
+                        <span>GitHub</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+                        <span>Git</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
+                        <span>VSCode</span>
+                    </div>
+                </div>
+            </div>
             
             <br/>
 
@@ -79,7 +109,7 @@
 
             <br/>
 
-            <p>This app was built using HTML, CSS and JavaScript. Following the instructions of the one and only, CSS king, Kevin Powell I was able to build this modern and clean website while studying The Frontend Developer Career Path from Scrimba. As homework I built the "technology section" by myself.</p>
+            <p>Following the instructions of the one and only, CSS king, Kevin Powell I was able to build this modern and clean website while studying The Frontend Developer Career Path from Scrimba. As homework I built the "technology section" by myself.</p>
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
