--- a/portfolio-movies.html
+++ b/portfolio-movies.html
@@ -25,14 +25,14 @@
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
             </button>
-            <nav class="nav">
+           <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills & Tools</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="index.html#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="index.html#skills" class="nav__link">Skills & Tools</a></li>
+                    <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -50,6 +50,36 @@
             <p style="text-align: center;"><strong>Scrimba - Solo Project</strong></p>
             <p>With this app you can search for movies and series, check their ratings and save them in your watchlist for later.</p>
             
+            <div class="portfolio-skills-container">
+                <p class="portfolio-skills__subtitle">Tools and technologies used for this project</p>
+                <div class="skills">
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                        <span>HTML5</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                        <span>CSS3</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />
+                        <span>GitHub</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+                        <span>Git</span>
+                    </div>
+                    <div class="icon-container">
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
+                        <span>VSCode</span>
+                    </div>
+                </div>
+            </div>
+
             <br/>
 
             <!-- Carousel -->
@@ -82,7 +112,7 @@
 
             <br/>
 
-            <p>This app was built using HTML, CSS and JavaScript.</p>
+            <!-- <p>This app was built using HTML, CSS and JavaScript.</p> -->
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
