--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 
         <!-- Contact Form -->
-        <section class="contact-form" id="contact">
+        <!-- <section class="contact-form" id="contact">
             <h2 class="section__title section__title--work">Contact me!</h2>
             <p class="section__subtitle section__subtitle--work">Have a question or want to work together?</p>
     
@@ -280,7 +280,7 @@
     
                 <button class="btn form-btn" value="send">Send email</button>  
             </form>
-        </section>
+        </section> -->
 
 
         <!-- Footer -->
