--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </section>
         
 
-        <div class="angle angle2 hidden"></div>
+        <!-- <div class="angle angle2 hidden"></div> -->
 
 
         <!-- Contact Form -->
