animated header in all projects

--- a/portfolio-movies.html
+++ b/portfolio-movies.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                Movies <strong>Watchlist App</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                Movies <strong class="animate-pop-in">Watchlist App</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">save your fav movies</p>
-            <img src="img/movies-watchlist/movies-logo.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">save your fav movies</p>
+            <img src="img/movies-watchlist/movies-logo.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
