--- a/portfolio-pokemon.html
+++ b/portfolio-pokemon.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                The <strong>Pokemon App</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                The <strong class="animate-pop-in">Pokemon App</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">pokemon world</p>
-            <img src="img/pokemon/pokemon-logo-02.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">pokemon world</p>
+            <img src="img/pokemon/pokemon-logo-02.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
