--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                E-Commerce <strong>Sirun Pâtisserie</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                E-Commerce <strong class="animate-pop-in">Sirun Pâtisserie</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">pastry & events</p>
-            <img src="img/sirun-patisserie/sirun-logo.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">pastry & events</p>
+            <img src="img/sirun-patisserie/sirun-logo.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
