--- a/portfolio-tenzies.html
+++ b/portfolio-tenzies.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                The <strong>Tenzies Game</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                The <strong class="animate-pop-in">Tenzies Game</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">family game</p>
-            <img src="img/tenzies/tenzies-logo.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">family game</p>
+            <img src="img/tenzies/tenzies-logo.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
