--- a/portfolio-quizzical.html
+++ b/portfolio-quizzical.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                The <strong>Quizzical App</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                The <strong class="animate-pop-in">Quizzical App</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">movies & cinema</p>
-            <img src="img/quizzical/quizzical-logo.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">movies & cinema</p>
+            <img src="img/quizzical/quizzical-logo.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
