--- a/portfolio-space-travel.html
+++ b/portfolio-space-travel.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                Space<strong>Tourism Website</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                Space<strong class="animate-pop-in">Tourism Website</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">space travel</p>
-            <img src="img/space-travel/space-logo.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">space travel</p>
+            <img src="img/space-travel/space-logo.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
