--- a/portfolio-tindog.html
+++ b/portfolio-tindog.html
@@ -39,11 +39,11 @@
         
 
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                The<strong>Tindog App</strong>
+            <h1 class="section__title section__title--intro animate-pop-in">
+                The <strong class="animate-pop-in">Tindog App</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">tinder for dogs</p>
-            <img src="img/tindog/tindog-logo-02.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro animate-pop-in">tinder for dogs</p>
+            <img src="img/tindog/tindog-logo-02.jpg" alt="" class="intro__img animate-slide-right">
         </section>
         
         <div class="portfolio-item-individual">
