--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -38,6 +38,13 @@
         </header>
         
 
+        <!-- Loading -->
+        <div id="loading">
+            <img class="loading-image" src="img/loader.gif" alt="Loading..." />
+        </div>
+
+
+        <!-- Intro -->
         <section class="intro">
             <h1 class="section__title section__title--intro animate-pop-in">
                 E-Commerce <strong class="animate-pop-in">Sirun Pâtisserie</strong>
