--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
                     <span>Angular</span>
                 </div>
                 <div class="icon-container">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
+                    <span>MongoDB</span>
+                </div>
+                <div class="icon-container">
                     <img src="/img/prisma-logo.png" />
                     <span>Prisma</span>
                 </div>
