--- a/index.html
+++ b/index.html
@@ -193,22 +193,22 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
                     <span>Nextjs</span>
                 </div>
-                <div class="icon-container">
+                <!-- <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
                     <span>Angular</span>
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
                     <span>MongoDB</span>
-                </div>
+                </div> -->
                 <div class="icon-container">
                     <img src="/img/prisma-logo.png" />
                     <span>Prisma</span>
                 </div>
-                <div class="icon-container">
+                <!-- <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" />
                     <span>Firebase</span>
-                </div>
+                </div> -->
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sequelize/sequelize-original.svg" />
                     <span>Sequelize</span>
