--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
-                    <span>Nextjs</span>
+                    <span>NextJS</span>
                 </div>
                 <!-- <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" />
