--- a/portfolio-sirun.html
+++ b/portfolio-sirun.html
@@ -39,9 +39,9 @@
         
 
         <!-- Loading -->
-        <div id="loading">
+        <!-- <div id="loading">
             <img class="loading-image" src="img/loader.gif" alt="Loading..." />
-        </div>
+        </div> -->
 
 
         <!-- Intro -->
