bootcamp name changed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
            
            <div class="about-me__body">
                <p>Hi there, I'm Alexía! I'm a Full Stack Developer with a Business Administration Degree.</p>
-               <p>I graduated in Business Administration in 2019 and was interested in learning new technologies so at first I started studying Web Development independently until I joined the Henry Bootcamp to acquire and develop soft skills, meet new people, participate in complex projects and gain confidence in myself and my skills to enter the job market.</p>
+               <p>I graduated in Business Administration in 2019 and was interested in learning new technologies so at first I started studying Web Development independently until I joined the Full Stack Development Bootcamp from Henry to acquire and develop soft skills, meet new people, participate in complex projects and gain confidence in myself and my skills to enter the job market.</p>
                <p>I'm a responsible and proactive person who pays a lot of attention to detail. I consider myself to have emotional intelligence. Fan of planning and organization. Absolute team player!</p>
                <p><strong>Fan facts:</strong> I lived in Argentina my whole life until October 2021 when I moved to Italy. I speak 3 languages: Spanish, English and Italian. And also I play golf!</p>
            </div>
