--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer" id="contact">
             <a href="mailto:alexiamilanesio9@gmail.com" class="footer__link">alexiamilanesio9@gmail.com</a>
             
             <ul class="social-list">
