--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" />
                     <span>Firebase</span>
                 </div> -->
-                <div class="icon-container">
+                <!-- <div class="icon-container">
                     <img src="/img/prisma-logo.png" />
                     <span>Prisma</span>
-                </div>
+                </div> -->
                 <div class="icon-container">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sequelize/sequelize-original.svg" />
                     <span>Sequelize</span>
