name scrimba course

--- a/portfolio-space-travel.html
+++ b/portfolio-space-travel.html
@@ -109,7 +109,7 @@
 
             <br/>
 
-            <p>Following the instructions of the one and only, CSS king, Kevin Powell I was able to build this modern and clean website while studying The Frontend Web Developer Career Path from Scrimba. As homework I built the "technology section" by myself.</p>
+            <p>Following the instructions of the one and only, CSS king, Kevin Powell I was able to build this modern and clean website while studying The Frontend Developer Career Path from Scrimba. As homework I built the "technology section" by myself.</p>
 
             <p>If you want to know more about this project do not hesitate to check it out. Here I leave you the deployment and the GitHub respository links:</p>
 
